crates/tt-cli/src/commands/snapshots/tt_cli__commands__status__tests__status_command_outputs_last_event_per_source.snap
---
source: crates/tt-cli/src/commands/status.rs
expression: output
---
Time tracker status
Database: [TEMP]/tt.db
Sources:
- remote.agent: 2025-01-01T00:02:00Z
- remote.tmux: 2025-01-01T00:00:00Z
