crates/tt-cli/src/commands/snapshots/tt_cli__commands__status__tests__status_empty_database.snap
---
source: crates/tt-cli/src/commands/status.rs
expression: output
---
NOW   no active stream
TOP   no top todo
WIP   0/4
      0 proposals pending
      classifier has not run yet

Database: /path/to/events.db

No events recorded yet.
