crates/tt-cli/src/commands/snapshots/tt_cli__commands__status__tests__status_with_events.snap
---
source: crates/tt-cli/src/commands/status.rs
expression: output
---
NOW   no active stream
TOP   no top todo
WIP   0/4
      0 proposals pending
      classifier has not run yet
      ⚠ tmux_pane_focus stale — tmux hook (config/tmux-hook.conf) last reported 556d ago (2025-01-29T11:45:00Z)

Database: /path/to/events.db

Sources:
  remote.agent:  2025-01-29T11:45:00Z
  remote.tmux:  2025-01-29T10:30:00Z
